ensure scrollbar doesn't obscure server url

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -219,7 +219,7 @@ md-sidenav {
       max-width: 800px;
       border: 1px solid #000;
       padding: 3px;
-      height: 1.2em;
+      height: 2.1em;
       background-color: #FFF;
     }
   }
